chore: cleaning up grammarly stuff and things

--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -64,13 +64,13 @@ Clerk creates an OAuth application and returns it's configurations back to you.
 ```
 
 <Callout type="warning" emoji="⚠️">
-  For security reasons, we do not store your Client Secret and cannot show it to you again, so we recommend you download the secret and store it someplace secure.
+  For security reasons, Clerk does not store your Client Secret and cannot show it to you again, so we recommend you download the secret and store it someplace secure.
 </Callout>
 
 
 ### Configure OAuth Application in client
 
-Now that you have setup an OAuth application in Clerk, you will need to configure these settings in your Client.
+Now that you have set up an OAuth application in Clerk, you will need to configure these settings in your Client.
 
 * **Client ID**: Public identifier of your OAuth application
 * **Client Secret**: Confidential secret used to authenticate your OAuth application
