--- a/docs/authentication/social-connections/apple.mdx
+++ b/docs/authentication/social-connections/apple.mdx
@@ -1,6 +1,6 @@
 ---
 title: Apple
-description: Learn how to setup social connection with Apple.
+description: Learn how to set up social connection with Apple.
 ---
 
 # Apple
@@ -9,7 +9,7 @@ How to set up social connection with Apple
 
 ## Overview
 
-To make development flow as smooth as possible, Clerk uses pre-configured configuration profiles - steps are needed to your part (other than enabling the provider from Dashboard). For production instances, the process for Apple is a bit more complicated compared to other providers, but don't worry - Clerk provides step-by-step instructions with pictures to help guide you.
+To make development flow as smooth as possible, Clerk uses pre-configured configuration profiles - steps are needed to your part (other than enabling the provider from Dashboard). For production instances, the process for Apple is a bit more complicated compared to other providers, but don't worry - Clerk provides step-by-step instructions to help guide you.
 
 > The purpose of this guide is to help you create an Apple App that can be used with Clerk's OAuth implementation, for the purpose of integrating your application with [Sign in with Apple](https://developer.apple.com/sign-in-with-apple/). If you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
 
