--- a/docs/authentication/social-connections/bitbucket.mdx
+++ b/docs/authentication/social-connections/bitbucket.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bitbucket
-description: Learn how to setup social connection with Bitbucket.
+description: Learn how to set up social connection with Bitbucket.
 ---
 
 # Bitbucket
@@ -9,7 +9,7 @@ How to set up social connection with Bitbucket
 
 ## Overview
 
-Adding social connection with Bitbucket to your app with Clerk is simple - you will need to populate the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Bitbucket to your app with Clerk is done in a few steps - you will need to populate the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
