--- a/docs/authentication/social-connections/google.mdx
+++ b/docs/authentication/social-connections/google.mdx
@@ -1,6 +1,6 @@
 ---
 title: Google
-description: Learn how to setup social connection with Google.
+description: Learn how to set up social connection with Google.
 ---
 
 # Google
@@ -9,7 +9,7 @@ How to set up social connection with Google
 
 ## Overview
 
-Adding social connection with Google to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Google to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
@@ -26,7 +26,7 @@ For production instances, you will need to create your own developer account wit
 
 First, go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) of your Clerk dashboard. From the list of OAuth vendors, enable Google. In the modal that opened, make sure **Use custom credentials** is enabled, and copy the value of the **Authorized redirect URI** field (you will have to paste this in the Google Console in a bit). Leave that window open as you will need to fill in the Client ID and Client Secret values that you will retrieve from the Google Cloud Platform console.
 
-In a new window, go to your Google Cloud Platform console. Select your Google project (step 1 in the screenshot) and enable OAuth 2.0 support by following the official instructions on [how to setup up an OAuth 2.0 application](https://support.google.com/cloud/answer/6158849?hl=en). In the **Authorized redirect URIs** setting, paste the value you copied from Clerk's Dashboard (see previous paragraph).
+In a new window, go to your Google Cloud Platform console. Select your Google project (step 1 in the screenshot) and enable OAuth 2.0 support by following the official instructions on [how to set up up an OAuth 2.0 application](https://support.google.com/cloud/answer/6158849?hl=en). In the **Authorized redirect URIs** setting, paste the value you copied from Clerk's Dashboard (see previous paragraph).
 
 ![Creating an OAuth client ID in Google Cloud console](/docs/images/authentication-providers/google/700f6f127f579f46032602391223bb42bd807b06-1696x992.png)
 
