--- a/docs/authentication/social-connections/slack.mdx
+++ b/docs/authentication/social-connections/slack.mdx
@@ -1,15 +1,15 @@
 ---
 title: Slack
-description: Learn how to setup social connection with Slack.
+description: Learn how to set up social connection with Slack.
 ---
 
 # Slack
 
-How to setup social connection with Slack
+How to set up social connection with Slack
 
 ## Overview
 
-Adding social connection with Slack to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URL** in your instance settings.
+Adding social connection with Slack to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URL** in your instance settings.
 
 > Please note that Sign in with Slack doesn't support any additional OAuth scopes other than **openid**, **email**, **profile**, which are requested by default
 
