--- a/docs/authentication/social-connections/spotify.mdx
+++ b/docs/authentication/social-connections/spotify.mdx
@@ -1,15 +1,15 @@
 ---
 title: Spotify
-description: Learn how to setup social connection with Spotify.
+description: Learn how to set up social connection with Spotify.
 ---
 
 # Spotify
 
-How to setup social connection with Spotify
+How to set up social connection with Spotify
 
 ## Overview
 
-Adding social connection with Spotify to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Spotify to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 > Clerk does not currently support preconfigured shared OAuth credentials for development instances. You will have to use your own credentials
 
