--- a/docs/authentication/social-connections/xero.mdx
+++ b/docs/authentication/social-connections/xero.mdx
@@ -1,15 +1,15 @@
 ---
 title: Xero
-description: Learn how to setup social connection with Linear.
+description: Learn how to set up social connection with Xero.
 ---
 
 # Xero
 
-How to setup social connection with Xero
+How to set up social connection with Xero
 
 ## Overview
 
-Adding social connection with Xero to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Xero to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
