--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -1,5 +1,5 @@
 ---
-title: <SignInWithMetamaskButton />
+title: <SignInButton />
 description: The `<SignInButton/>` component is a button that links to the sign-in page or displays the sign-in modal.
 ---
 
