--- a/docs/deployments/migrate-from-firebase.mdx
+++ b/docs/deployments/migrate-from-firebase.mdx
@@ -74,7 +74,7 @@ You can find more information about this page and the values above on [Firebase'
 
 ### Create a Node script
 
-Now you have all the information you need to import your Firebase users into Clerk. In this example, we are going to use node to do so, but you can use any other language or method if you so wish.
+Now you have all the information you need to import your Firebase users into Clerk. This example uses node, but you can use any other language or method if you so wish.
 
 #### init npm
 
