--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -1,6 +1,6 @@
 ---
 title: Setup Clerk
-description: Let's set up a new Clerk account and integrate it into a new application.
+description: Set up a new Clerk account and integrate it into a new application.
 ---
 
 import {FrameworkCards} from "@/components/FrameworkCards";
@@ -8,7 +8,7 @@ import { Steps } from 'nextra-theme-docs'
 
 # Setup Clerk
 
-Let's set up a new Clerk account and integrate it into a new application.
+Set up a new Clerk account and integrate it into a new application.
 
 <details>
   <summary>Migrating from another platform?</summary>
@@ -17,7 +17,7 @@ Let's set up a new Clerk account and integrate it into a new application.
   you move your data to Clerk.
 </details>
 
-Creating a Clerk account and using it in your apps is a simple three-step process:
+Creating a Clerk account and using it in your apps can be done in three steps:
 
 <Steps>
   ### Step 1: Create a Clerk account
