--- a/docs/references/javascript/phone-number/phone-number.mdx
+++ b/docs/references/javascript/phone-number/phone-number.mdx
@@ -12,7 +12,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 The `PhoneNumber` object describes a phone number. Phone numbers can be used as a proof of identification for users, or simply as a means of contacting users.
 
-Phone numbers must be verified, so that we can make sure they can be assigned to their rightful owners. The `PhoneNumber` object holds all the necessary state around the verification process.
+Phone numbers must be verifiedto ensure that they can be assigned to their rightful owners. The `PhoneNumber` object holds all the necessary state around the verification process.
 
 The verification process always starts with the [PhoneNumber.prepareVerification()](https://clerk.com/docs/reference/clerkjs/phonenumber#prepare-verification) method, which will send a one-time verification code via an SMS message. The second and final step involves an attempt to complete the verification by calling the [PhoneNumber.attemptVerification()](https://clerk.com/docs/reference/clerkjs/phonenumber#attempt-verification) method, passing the one-time code as a parameter.
 
