--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -38,7 +38,7 @@ Generates a TOTP secret for a user that can be used to register the application 
 function verifyTOTP(params: VerifyTOTPParams): Promise<TOTPResource>;
 ```
 
-Verifies a TOTP secret after a user has created it. The user must provide a code from their authenticator app, that has been generated using the previously created secret. This way correct setup and ownership of the authenticator app can be validated.
+Verifies a TOTP secret after a user has created it. The user must provide a code from their authenticator app, that has been generated using the previously created secret. This way, correct set up and ownership of the authenticator app can be validated.
 
 #### `VerifyTOTPParams`
 
