--- a/docs/authentication/social-connections/atlassian.mdx
+++ b/docs/authentication/social-connections/atlassian.mdx
@@ -1,6 +1,6 @@
 ---
 title: Atlassian
-description: Learn how to setup social connection with Atlassian.
+description: Learn how to set up social connection with Atlassian.
 ---
 
 # Atlassian
@@ -9,7 +9,7 @@ How to set up social connection with Atlassian
 
 ## Overview
 
-Adding social connection with Atlassian to your app with Clerk is simple - you will need to populate the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Atlassian to your app with Clerk is done in a few steps - you will need to populate the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
