--- a/docs/authentication/social-connections/box.mdx
+++ b/docs/authentication/social-connections/box.mdx
@@ -1,15 +1,15 @@
 ---
 title: Box
-description: Learn how to setup social connection with Box.
+description: Learn how to set up social connection with Box.
 ---
 
 # Box
 
-How to setup social connection with Box
+How to set up social connection with Box
 
 ## Overview
 
-Adding social connection with Box to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Box to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
