--- a/docs/authentication/social-connections/coinbase.mdx
+++ b/docs/authentication/social-connections/coinbase.mdx
@@ -1,15 +1,15 @@
 ---
 title: Coinbase
-description: Learn how to setup social connection with Coinbase.
+description: Learn how to set up social connection with Coinbase.
 ---
 
 # Coinbase
 
-How to setup social connection with Coinbase
+How to set up social connection with Coinbase
 
 ## Overview
 
-Adding social connection with Coinbase to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Coinbase to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
