--- a/docs/authentication/social-connections/facebook.mdx
+++ b/docs/authentication/social-connections/facebook.mdx
@@ -1,6 +1,6 @@
 ---
 title: Facebook
-description: Learn how to setup social connection with Facebook.
+description: Learn how to set up social connection with Facebook.
 ---
 
 # Facebook
@@ -9,13 +9,13 @@ How to set up social connection with Facebook
 
 ## Overview
 
-Adding social connection with Facebook to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with Facebook to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
 For production instances, you will need to create your own developer account with Facebook and generate your own **App ID** and **App Secret**.
 
-> The purpose of this guide is to help you setup a Facebook developer account and a Facebook OAuth2.0 project - if you're looking for step-by-step  instructions using Clerk to add Social Connection (OAuth) to your  application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+> The purpose of this guide is to help you set up a Facebook developer account and a Facebook OAuth2.0 project - if you're looking for step-by-step  instructions using Clerk to add Social Connection (OAuth) to your  application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
 
 ## Before you start
 
