--- a/docs/authentication/social-connections/line.mdx
+++ b/docs/authentication/social-connections/line.mdx
@@ -1,6 +1,6 @@
 ---
 title: LINE
-description: Learn how to setup social connection with LINE.
+description: Learn how to set up social connection with LINE.
 ---
 
 # LINE
@@ -9,7 +9,7 @@ How to set up social connection with LINE
 
 ## Overview
 
-Adding social connection with LINE to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with LINE to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
