--- a/docs/authentication/social-connections/linear.mdx
+++ b/docs/authentication/social-connections/linear.mdx
@@ -1,15 +1,15 @@
 ---
 title: Linear
-description: Learn how to setup social connection with Linear.
+description: Learn how to set up social connection with Linear.
 ---
 
 # Linear
 
-How to setup social connection with Linear
+How to set up social connection with Linear
 
 ## Overview
 
-Adding social connection with Linear to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URL** in your instance settings.
+Adding social connection with Linear to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URL** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
