--- a/docs/authentication/social-connections/tiktok.mdx
+++ b/docs/authentication/social-connections/tiktok.mdx
@@ -1,6 +1,6 @@
 ---
 title: TikTok
-description: Learn how to setup social connection with TikTok.
+description: Learn how to set up social connection with TikTok.
 ---
 
 # TikTok
@@ -9,13 +9,13 @@ How to set up social connection with TikTok
 
 ## Overview
 
-Adding social connection with TikTok to your app with Clerk is simple - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+Adding social connection with TikTok to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
 To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
 For production instances, you will need to create your own developer account with **TikTok** and generate your own Client ID and Client secret.
 
-> The purpose of this guide is to help you setup a TikTok developer account  and a TikTok OAuth app - if you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+> The purpose of this guide is to help you set up a TikTok developer account  and a TikTok OAuth app - if you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
 
 ## Before you start
 
