--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -1,7 +1,6 @@
 ---
 title: <CreateOrganization />
-description: The `<CreateOrganization />` component is used to render an organization creation
-UI that allows users to create brand new organizations within you application.
+description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within you application.
 ---
 
 import { Tab, Tabs } from "nextra-theme-docs";
@@ -18,8 +17,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
   src="/images/ui-components/component-org_switcher.svg"
 />
 
-The `<CreateOrganization />` component is used to render an organization creation
-UI that allows users to create brand new organizations within you application.
+The `<CreateOrganization />` component is used to render an organization creatio UI that allows users to create brand new organizations within you application.
 
 ## Usage
 
