--- a/docs/components/organization/organization-switcher.mdx
+++ b/docs/components/organization/organization-switcher.mdx
@@ -1,7 +1,6 @@
 ---
 title: <OrganizationSwitcher />
-description: The `<OrganizationSwitcher />` component is used to enable the ability to switch
-between available organizations the user may be part of in your application.
+description: The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
 
 import { Tab, Tabs } from "nextra-theme-docs";
@@ -18,8 +17,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
   src="/images/ui-components/component-org_switcher.svg"
 />
 
-The `<OrganizationSwitcher />` component is used to enable the ability to switch
-between available organizations the user may be part of in your application.
+The `<OrganizationSwitcher />` component is used to enable the ability to switch between available organizations the user may be part of in your application.
 
 ## Usage
 
