Add description on finding the signing secret

--- a/src/pages/integrations/webhooks.mdx
+++ b/src/pages/integrations/webhooks.mdx
@@ -10,7 +10,9 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a POST request to a URL you specify when certain events happen in your Clerk account.
 
-Clerk uses Svix to send our webhooks and you can find more information about Svix [here](https://svix.com/).
+Clerk uses Svix to send our webhooks and you can find more information about Svix [here](https://svix.com/). 
+
+You can find the Webhook signing secret when you click on the endpoint you created under Webhooks on the Clerk dashboard.
 
 ## Supported webhook events
 
