--- a/docs/account-portal/hosted-pages.mdx
+++ b/docs/account-portal/hosted-pages.mdx
@@ -2,13 +2,13 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Dedicated Hosted Pages
 
-For every instance, Clerk offers sign-up, sign-in, and user profile pages out of the box. Additionally, if you are using our Organizations feature, you will also get the organization profile page 
-
-For development instances, Clerk will issue you a domain on "lcl.dev". You can access these links via the 'pages' tab under Account Portal in your Clerk dashboard.
+For every instance, Clerk offers sign-up, sign-in, and user profile pages out of the box. Additionally, if you are using our Organizations feature, you will also get the organization profile page.
+You can access these links via the 'pages' tab under Account Portal in your Clerk dashboard.
 
 ![Account Portal](/docs/images/account-portal/account-portal-hosted-pages.png)
 
- In production, by default, the URLs for your Account Portal are the following: 
+ 
+For development instances, Clerk will issue you a domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following: 
 
 ```sh 
 https://accounts.[your-domain].com/sign-in
@@ -17,8 +17,3 @@ https://accounts.[your-domain].com/user
 https://accounts.[your-domain].com/organization
 https://accounts.[your-domain].com/create-organization
 ``` 
-
-
-<Callout type="info" emoji="ℹ️">
-Note that when you go to production, this is why Clerk requires adding the `accounts` CNAME record as part of your DNS settings. If you do not want to do this and are using your own components, you may disable the Account Portal pages via the 'Danger' tab.
-</Callout>
