--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -1,6 +1,5 @@
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
 
 
 # Introduction
@@ -11,13 +10,17 @@ The Account Portal offers a comprehensive solution for managing user authenticat
 
 ## How the Account Portal works
 
-The Account Portal uses components embedded on pages hosted by Clerk, these are tied to your specific instance. If you do not have dedicated sign-in or sign-up pages specified for your application, Clerk will default to these pages for you. After Signing in or Signing up for your application, users will be automatically redirected to your application.
-
-For development environments, the development host is dynamically detected at runtime for you and we are able to automatically redirect users for a seamless authentication experience between the Account Portal and your application. For production environments, we require that you configure the Account Portal with your DNS provider.
-
+The Account Portal uses our Clerk components embedded on dedicated pages hosted for your application will automatically redirect your users between these pages and your application for a seamless authentication experience. You do not need to set up any dedicated paths or pages for this to work. 
 
 ## Getting Started  
 
-To use the Account Portal, add Clerk to your application and protect your pages. Any time an unauthenticated user attempts to access a protected page in your application, they will automatically get redirected to the Account Portal pages to Sign in.
+To use the Account Portal, simply add Clerk to your application and protect your pages. Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
 
-Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
+<Steps>
+### Install Clerk for your framework of choice
+
+### Add Clerk to your application
+
+### Protect your Pages
+
+</ Steps>
