--- a/docs/account-portal/redirects.mdx
+++ b/docs/account-portal/redirects.mdx
@@ -3,10 +3,10 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 # Custom Redirects
 
 
-With the Account Portal, we default the user back to where they came from after a successful auth event (sign in or sign up) and pass this parameter via a `redirect_url` query param.
+With the Account Portal, we rely on the `redirect_url` query param passed from your application to redirect users after they Sign In or Sign Up. This gives you the ability to dynamically generated redirects based on context.
 
-For situations where this may not be possible, Clerk defaults to your application homepage and expects the appropriate redirects will kick in. You can also specify default fallbacks directly in the dashboard as well. 
+For externally-initiated situations such as User Impersonation or SAML where the context is not available *and the query param has not been defined*, Clerk defaults to your application homepage as a fallback. If you prefer a different fallback path, you can specify the following paths via the 'redirects' tab under Account Portal in your Clerk dashboard.
 
-- **After sign-up fallback**: Define the landing page or a specific section of your application where users should be redirected to after successfully creating a new account.
-- **After sign-in fallback**: Define the landing page or a specific section of your application where users should be directed after a successful sign-in.
-- **After Logo Click**: Specify the destination page or action users should be redirected to after they click on your logo from the Account Portal pages.
+- **After sign-up fallback**: Fallback path to redirect users to after a successful sign up.
+- **After sign-in fallback**: Fallback path to redirect users to after a successful sign in.
+- **Logo Click**: If you have uploaded a logo, specify where to take users if they click on it.
