--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -119,7 +119,9 @@ With this middleware, your entire application is protected. If you try to access
 
 <Callout type="info" emoji="🎉">
 
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/features/account-portal.mdx) pages that are available out of box. Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/features/account-portal.mdx) pages that are available out of box. 
+ 
+ You can start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 </Callout>
 
 
