--- a/docs/account-portal/customization.mdx
+++ b/docs/account-portal/customization.mdx
@@ -1,14 +1,13 @@
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+import { Callout } from "nextra-theme-docs";
 
 
 # Customization
 
-The Account Portal also offers a limited set of capabilities to align the visual appearance of the pages with your application's branding and design. This includes the ability to customize the colors, font and button weights.
+The Account Portal also offers a limited set of capabilities to align the visual appearance of the pages with your application's branding and design. This includes the ability to customize the page, component and button colors as well as the font.
 
 If you’d rather a precise level of customization through code to match your styling - it is recommended that you use Clerk's embedded components leveraging the [appearance prop](https://clerk.com/docs/component-reference/customization) instead.
 
-
 <Callout type="info" emoji="ℹ️">
-Clerk is actively working on improving the capabilities here, so if you have any specific requests - please reach out!
+Clerk is actively working on adding to our customization feature set for the Account Portal, so if you have any specific requests - please reach out!
 </Callout>
 
