--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -10,17 +10,24 @@ The Account Portal offers a comprehensive solution for managing user authenticat
 
 ## How the Account Portal works
 
-The Account Portal uses our Clerk components embedded on dedicated pages hosted for your application will automatically redirect your users between these pages and your application for a seamless authentication experience. You do not need to set up any dedicated paths or pages for this to work. 
+The Account Portal uses our Clerk components embedded on dedicated pages hosted for your application and users are automatically redirect to and from your application for a seamless authentication experience.
+
+This is available out of box for all instances and you do not need to set up any dedicated paths or pages.
 
 ## Getting Started  
 
-To use the Account Portal, simply add Clerk to your application and protect your pages. Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
+To use the Account Portal, simply:
+
+- Install Clerk
+- Add Clerk to your Application
+- Protect your Pages
+
+Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
 
 <Steps>
-### Install Clerk for your framework of choice
+Install Clerk
 
-### Add Clerk to your application
+Add Clerk to your application
 
-### Protect your Pages
-
+Protect your Pages
 </ Steps>
