--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -16,7 +16,7 @@ This is available out of box for all instances and you do not need to set up any
 
 ## Getting Started  
 
-To use the Account Portal, simply:
+To use the Account Portal in your application, simply:
 
 - Install Clerk
 - Add Clerk to your Application
@@ -25,9 +25,11 @@ To use the Account Portal, simply:
 Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
 
 <Steps>
-Install Clerk
+*Install Clerk*
+- asdf
 
 Add Clerk to your application
+
 
 Protect your Pages
 </ Steps>
