--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -1,5 +1,6 @@
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 import {Steps} from "nextra-theme-docs";
+import {FrameworkCards} from "@/components/FrameworkCards";
 
 
 # Introduction
@@ -16,20 +17,27 @@ This is available out of box for all instances and you do not need to set up any
 
 ## Getting Started  
 
-To use the Account Portal in your application, simply:
+To use the Account Portal in your application, you simply need to: 
 
-- Install Clerk
-- Add Clerk to your Application
+- Install and add Clerk to your application
 - Protect your Pages
 
-Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
+You can follow along and get set up simply by following the quickstart guide for your framework of choice:
 
-<Steps>
-*Install Clerk*
-- asdf
+  <div className="container mx-auto my-4">
+    <div className="grid grid-cols-1 gap-6 md:grid-cols-3">
 
-Add Clerk to your application
+      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" icon="/images/logos/nextjs.svg" iconWidth="40" />
 
+      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/quickstarts/frontend/react" cta="Get Started" icon="/images/logos/react.svg" />
 
-Protect your Pages
-</ Steps>
+      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/remix.svg" />
+
+      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/redwood.svg" />
+
+      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" icon="/images/logos/expo.svg" />
+
+      <FrameworkCards title="Javascript" description="Learn how to add Clerk to your JavaScript application." link="/quickstarts/javascript" cta="Get Started" icon="/images/logos/javascript.svg" />
+
+    </div>
+  </div>
