--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -24,8 +24,8 @@ To use the Account Portal in your application, you simply need to:
 
 You can follow along and get set up simply by following the quickstart guide for your framework of choice:
 
-  <div className="container mx-auto my-4">
-    <div className="grid grid-cols-1 gap-6 md:grid-cols-3">
+<div className="container my-4 min-w-full">
+  <div className="grid xl:grid-cols-3 xl:grid-rows-2 md:grid-cols-2 md:grid-rows-3 justify-center gap-x-7">
 
       <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" icon="/images/logos/nextjs.svg" iconWidth="40" />
 
