chore: editorial fixes

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -12,7 +12,7 @@ import { Images } from "@/components/Images";
 
 # Use Clerk with Next.js
 
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
+Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly in both client side and server side components.
 
 ## Install @clerk/nextjs
 
@@ -34,16 +34,16 @@ Once you have a Next.js application ready, you need to install Clerk's Next.js S
 
 ## Set Environment Keys
 
-Below is an example of an `.env.local` file. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
+Below is an example of an `.env.local` file. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon.
 
 ```sh copy filename=".env.local"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
 CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
 ```
 
-## Mount `<ClerkProvider>`
+## Mount `<ClerkProvider />`
 
-Update your root layout to include the `<ClerkProvider>` wrapper. The `<ClerkProvider>` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider>` wraps the `<body>` to enable the context to be accessible anywhere within the app.
+Update your root layout to include the `<ClerkProvider />` wrapper. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider />` wraps the `<body />` to enable the context to be accessible anywhere within the app.
 
 <Tabs items={["App Directory", "Pages Directory"]}>
   <Tab>
@@ -77,7 +77,7 @@ import type { AppProps } from "next/app";
 function MyApp({ Component, pageProps }: AppProps) {
   return (
     <ClerkProvider {...pageProps}>
-     <Component {...pageProps} />
+      <Component {...pageProps} />
     </ClerkProvider>
   );
 }
@@ -88,7 +88,7 @@ export default MyApp;
 </Tabs>
 
 <Callout type="warning">
-  The root layout is a server component, if you plan to use the `<ClerkProvider>` outside the root layout it will need to be a server component as well.
+  The root layout is a server component. If you plan to use the `<ClerkProvider/>` outside the root layout, it will need to be a server component as well.
 </Callout>
 
 Clerk offers a set of prebuilt components that you can use to embed sign in, sign up, and other user management functions into your Next.js application.
@@ -149,7 +149,7 @@ export default function Page() {
 </Tabs>
 
 <Callout type="info" emoji="ℹ️">
-  By default, the Clerk components inherit the font family. With create-next-app they don't apply a global font family. When you launch your application you may notice that the font family is different.
+  By default, the Clerk components inherit the font family. With create-next-app, they don't apply a global font family. When you launch your application, you may notice that the font family is different.
 </Callout>
 
 ### Update your dashboard settings
