--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -38,7 +38,7 @@ Creating a Clerk account and using it in your apps can be done in three steps:
 
   <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![An "Add application" card on your dashboard](/docs/images/get-started/add-application.png)</div>
 
-  When the "Add application" card is pressed, you'll be directed to create your `<SignIn>` component and select your preferred
+  When the "Add application" card is pressed, you'll be directed to create your `<SignIn />` component and select your preferred
   auth providers.
 
   {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
@@ -66,7 +66,7 @@ Creating a Clerk account and using it in your apps can be done in three steps:
 
       <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/remix.svg" />
 
-      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/redwood.svg" />
+      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/redwoodjs" cta="Get Started" icon="/images/logos/redwood.svg" />
 
       <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" icon="/images/logos/expo.svg" />
 
