--- a/docs/advanced-usage/custom-session-token.mdx
+++ b/docs/advanced-usage/custom-session-token.mdx
@@ -42,7 +42,7 @@ alt="Clerk Dashboard with an arrow pointing to the edit"
 
 ### Add a new claim to the session token
 
-At this point you are able to select all the session tokens you need. In this example, we are adding a new claim called `fullName` and `primaryEmail` to the session token.
+At this point, you are able to select all the session tokens you need. This examples adds a new claim called `fullName` and `primaryEmail` to the session token.
 
 <Images
 src="/images/advance/session-tokens/custom-session-example.png"
