--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -3,7 +3,7 @@ title: <UserButton />
 description: The `<UserButton/>` component is used to render the familiar user button UI popularized by Google.
 ---
 
-mport { Tab, Tabs } from "nextra-theme-docs";
+import { Tab, Tabs } from "nextra-theme-docs";
 import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
