fix: fix malformatted frontmatter

--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -1,6 +1,7 @@
 ---
 title: User Metadata
-description: Metadata allows for custom data to be saved on the User object. There are three types of metadata: "unsafe", "public", and "private".
+description: >-
+  Metadata allows for custom data to be saved on the User object. There are three types of metadata: "unsafe", "public", and "private".
 ---
 
 import { Tab, Tabs } from "nextra-theme-docs";
