feat: add overview pages and tweak content

--- a/docs/components/overview.mdx
+++ b/docs/components/overview.mdx
@@ -1,5 +1,4 @@
 ---
-sanity_slug: /docs/component-reference/overview
+title: Component Reference
+description: Learn about the available Clerk Components and how easy it is to integrate them into your application.
 ---
-
-# This is a stub
