--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome to Clerk Docs!
+title: Welcome to Clerk Docs
 description: Add complete user management to your application in minutes.
 ---
 
