--- a/docs/integrations/overview.mdx
+++ b/docs/integrations/overview.mdx
@@ -1,5 +1,4 @@
 ---
-sanity_slug: /docs/integration/overview
+title: Integrations
+description: Learn about the available integrations with Clerk.
 ---
-
-# This is a stub
